tests/machine/x/rust/len_builtin.error
line 0: compile: exit status 1
error[E0425]: cannot find function `len` in this scope
 --> /workspace/mochi/tests/machine/x/rust/len_builtin.rs:2:22
  |
2 |     println!("{:?}", len(vec![1, 2, 3]));
  |                      ^^^ not found in this scope
  |
help: use the `.` operator to call the method `len` on `&Vec<{integer}>`
  |
2 -     println!("{:?}", len(vec![1, 2, 3]));
2 +     println!("{:?}", vec![1, 2, 3].len());
  |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.

fn main() {
