tests/machine/x/rust/len_builtin.rs
fn main() {
    println!("{:?}", len(vec![1, 2, 3]));
}
